# accumulation-unix-programming

./: CMakeLists.txt  exec.cpp  main.cpp
Chapter3FIleIO/: CMakeLists.txt  Read.cpp  happy_new_year
NetworkIPCServer/: CMakeLists.txt  happy_new_year  server-socket-fork.cpp  server-socket.cpp
NetworkIPCSockets/: CMakeLists.txt  apue.h  client-socket.cpp
ProcessControl/: prctl.cpp
TestPrograms/: CMakeLists.txt  SleepSeveralSeconds.cpp
chapter15inerprocess_communication/: CMakeLists.txt  popen_start.cpp
chapter8ProcessControl/: CMakeLists.txt  fig8_1_fork_example.cpp
libprocess/: CMakeLists.txt  FooProcess.cpp  MyMaster.cpp  PromiseAndFuture.cpp  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  client_protobuf_message_event.cpp  delay.cpp  main.cpp  messageevent.cpp  protobufmessageevent.cpp  server_protobuf_message_event.cpp  simpleclient.cpp  simplesever.cpp
linux_library_function_learning/: CMakeLists.txt  cpu_usage_by_top.cpp  getenv.cpp  getloadavg.cpp  permission.cpp
protobuf-test/: CMakeLists.txt  Test1.cpp  Test1.proto  addressbook  main.cpp
stout/: bytes.hpp  cache.hpp  check.hpp  duration.hpp  error.hpp  exit.hpp  fatal.hpp  foreach.hpp  format.hpp  fs.hpp  gtest.hpp  gzip.hpp  hashmap.hpp  hashset.hpp  json.hpp  lambda.hpp  multihashmap.hpp  multimap.hpp  net.hpp  none.hpp  nothing.hpp  numify.hpp  option.hpp  os.hpp  owned.hpp  path.hpp  proc.hpp  protobuf.hpp  result.hpp  stopwatch.hpp  stringify.hpp  strings.hpp  thread.hpp  try.hpp  utils.hpp  uuid.hpp
stout/flags/: flag.hpp  flags.hpp  loader.hpp  parse.hpp
